# nosh

./: .gitignore  Cargo.toml  SKILL.md  justfile
.github/workflows/: release.yml
src/: app.rs  calendar.rs  e2e.rs  fuzzy.rs  main.rs  markdown.rs  storage.rs  ui.rs
